--- a/app/src/main/res/layout/activity_clock_selection.xml
+++ b/app/src/main/res/layout/activity_clock_selection.xml
@@ -1,14 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ClockSelectionActivity">
 
-    <TextView
-        android:id="@+id/tv"
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/btnDoneClockSelection"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:cardCornerRadius="25dp"
+        android:backgroundTint="@color/black"
+        android:layout_marginStart="35dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="25dp"
+        >
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Done"
+            android:textAlignment="center"
+            android:layout_gravity="center"
+            android:textColor="#D9F1EE"
+            android:padding="13dp"
+            />
+    </com.google.android.material.card.MaterialCardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/myRv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        tools:listitem="@layout/clock_list_item_layout"
+        app:layout_constraintStart_toStartOf="@id/btnDoneClockSelection"
+        app:layout_constraintEnd_toEndOf="@id/btnDoneClockSelection"
+        app:layout_constraintTop_toBottomOf="@id/btnDoneClockSelection"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
